EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Female__c.field-meta.xml
<CustomField>
    <fullName>hed__Female__c</fullName>
    <description>The value used for the Reciprocal Setting if the Contact&apos;s Gender or Salutation field indicates Female gender.</description>
    <inlineHelpText>El valor utilizado para el parámetro de reciprocidad si el Género del contacto o el campo Saludo indica el género Femenino.</inlineHelpText>
    <label>Female</label>
    <length>255</length>
    <type>Text</type>
</CustomField>