EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Relationship_Lookup__c/fields/hed__Neutral__c.field-meta.xml
<CustomField>
    <fullName>hed__Neutral__c</fullName>
    <description>The value used if the Contact&apos;s Gender and Saluation fields don&apos;t indicate gender.</description>
    <inlineHelpText>El valor empleado si el género del contacto y el campo Saludo no indica el género.</inlineHelpText>
    <label>Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>